# gpu-gameoflife

./: CMakeLists.txt  README.md
src/: main.cpp  mainloop.cpp
